fix menu button vertical alignment

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ and (max-width : 820px) {
     margin-left: 4px;
     cursor: pointer;
     margin-left: calc(50vw - 66px);
+    padding-top: 3px;
   }
 
   label[for="menu-toggle"]::selection {
